[package]
name = "send-it"
version = "0.1.1"
edition = "2021"
authors = ["Eric <skepz.dev@gmail.com>"]
description = "A tool for sending large amounts of data over a network."
license = "MIT"
repository = "https://github.com/Sk3pz/send-it"
documentation = "https://docs.rs/send-it"
keywords = ["send", "data", "variable-length", "encoding"]
categories = ["network-programming", "encoding"]

[features]
default = ["writing", "reading"]
writing = []
reading = []
big-endian = []