[package]
name = "send-it"
version = "0.1.3"
edition = "2021"
authors = ["Eric <skepz.dev@gmail.com>"]
description = "A tool for sending large amounts of data over a stream or network."
license = "MIT"
repository = "https://github.com/Sk3pz/send-it"
documentation = "https://docs.rs/send-it"
keywords = ["send", "data", "variable-length"]
categories = ["network-programming"]

[features]
default = ["writing", "reading"]
writing = []
reading = []
big-endian = []